<resources>
    <string name="app_name">BigCall</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="editNama">Nama Lengkap</string>
    <string name="editTanggal">Tanggal Lahir</string>
    <string name="editKelamin">Jenis Kelamin</string>
    <string name="editBB">Berat Badan</string>
    <string name="editTB">Tinggi Badan</string>
    <string name="judulCalca">Jumlah Kalori Hari ini</string>
    <string name="jmlKalKonsumsi">Jumlah Kalori yang dikonsumsi</string>
    <string name="jmlKalButuh">Jumlah Kalori yang dibutuhkan</string>
    <string name="jmlGram">Jumlah Gram</string>
    <string name="kembaliBtn">Kembali</string>
    <string name="simpanBtn">Simpan</string>
    <string name="logOutbtn">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>