<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmn"
    tools:context="C241.PS470.Bangkit.bigcall.CalcaMenu">


    <TextView
        android:id="@+id/textJudul"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/cylinder"
        android:gravity="center"
        android:text="@string/judulCalca"
        android:textColor="@color/orange"
        android:textSize="17sp"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/KalPiechart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/KalPiechart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/TextBoxKeterangan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textJudul" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TextBoxKeterangan"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/main_canvas"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/KalPiechart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KalPiechart">

        <TextView
            android:id="@+id/Keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginBottom="22dp"
            android:text="Keterangan"
            app:layout_constraintBottom_toTopOf="@+id/jmlKalKonsumsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/boxRed"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="16dp"
            android:background="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/jmlKalKonsumsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jmlKalButuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="14dp"
            android:text="@string/jmlKalButuh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxBrown"
            app:layout_constraintTop_toBottomOf="@+id/jmlKalKonsumsi" />

        <ImageView
            android:id="@+id/boxBrown"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="29dp"
            android:background="@color/brown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/jmlKalButuh"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/jmlKalKonsumsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="4dp"
            android:text="@string/jmlKalKonsumsi"
            app:layout_constraintBottom_toTopOf="@+id/jmlKalButuh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxRed"
            app:layout_constraintTop_toBottomOf="@+id/Keterangan" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/orange"
        android:text="@string/kembaliBtn"
        android:textSize="14sp"
        android:onClick="kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextBoxKeterangan" />


</androidx.constraintlayout.widget.ConstraintLayout>